--- a/android/build.gradle
+++ b/android/build.gradle
@@ -73,6 +73,16 @@ repositories {
 dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'  // From node_modules
+
+    implementation 'com.adpdigital.push:chabok-lib:3.1.0'
+
+    implementation 'me.leolin:ShortcutBadger:1.1.22@aar'
+    implementation 'com.google.firebase:firebase-messaging:20.0.1'
+    implementation 'com.android.installreferrer:installreferrer:1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:support-compat:28.0.0'
+    implementation 'com.android.support:localbroadcastmanager:28.0.0'
 }
 
 def configureReactNativePom(def pom) {
@@ -82,7 +92,7 @@ def configureReactNativePom(def pom) {
         name packageJson.title
         artifactId packageJson.name
         version = packageJson.version
-        group = "com.reactlibrary"
+        group = "com.adpdigital.push.rn"
         description packageJson.description
         url packageJson.repository.baseUrl
 
@@ -126,8 +136,8 @@ afterEvaluate { project ->
 
     android.libraryVariants.all { variant ->
         def name = variant.name.capitalize()
-        task "jar${name}"(type: Jar, dependsOn: variant.javaCompile) {
-            from variant.javaCompile.destinationDir
+        task "jar${name}"(type: Jar, dependsOn: variant.javaCompileProvider.get()) {
+            from variant.javaCompileProvider.get().destinationDir
         }
     }
 
